# abistr

./: Cargo.toml  Readme.md  rust-toolchain.toml
.github/workflows/: rust.yml
abistr/: Cargo.toml  abistr.natvis
abistr-macros/: Cargo.toml
abistr-macros/src/: cstr.rs  lib.rs
abistr/examples/: hello-world.rs  natvis-playground.rs
abistr/src/: array.rs  as_traits.rs  buffers.rs  encoding.rs  errors.rs  estring.rs  fmt.rs  lib.rs  macros.rs  pointers.rs  try_into_as_traits.rs  unit.rs
abistr/src/convert/: as_cstr.rs  as_opt_cstr.rs  mod.rs  try_into_as_cstr.rs  try_into_as_opt_cstr.rs
abistr/src/encoding/: c.rs  mod.rs  windows.rs
