# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name            = "abistr"
version         = "0.0.0-git"
authors         = ["MaulingMonkey <git@maulingmonkey.com>"]
edition         = "2018"
repository      = "https://github.com/MaulingMonkey/abistr"
documentation   = "https://docs.rs/abistr"
license         = "Apache-2.0 OR MIT"
readme          = "Readme.md"
description     = "C ABI compatible string types"
keywords        = ["string", "str"]
categories      = ["development-tools::ffi"]
exclude         = [".vscode"]

[features]
default         = ["std"]
std             = []

[package.metadata.docs.rs]
all-features    = true

[dependencies]
abistr-macros   = { path = "../abistr-macros", version = "0.0.0-git" }
bytemuck        = { version = "1", optional = true }
widestring      = { package = "widestring", version = "1", optional = true }
